--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
       # Install Newman
       - name: Install newman
         run: |
-          npm install -g newma 
+          npm install -g newman
 
       # run collection
       - uses: actions/checkout@v3
