--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,8 +38,10 @@ jobs:
         run: |
           npm install -g newman
 
-      # run collection
+      # run collection through Login Postman
       - uses: actions/checkout@v3
-      - name: Create dir
+      - name: Login to Postman CLI
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+      - name: Run API tests
         run: |
-          newman run postman login --with-api-key ${{secrets.POSTMAN_API_KEY}} postman collection run 13603091-ff0458f6-9c1a-45b6-9f05-8709e32e1c93 -e 13603091-eb0ab5a7-8d61-42d1-9f13-bd072d6cfcef
+          postman collection run "13603091-ff0458f6-9c1a-45b6-9f05-8709e32e1c93" -e "13603091-eb0ab5a7-8d61-42d1-9f13-bd072d6cfcef"
